@@ -11,23 +11,24 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-
 @Service
 public class PywbService implements DisposableBean {
     private final Logger log = LoggerFactory.getLogger(PywbService.class);
     private final Process process;
     private final Config config;
+    private final PywbConfig pywbConfig;
 
-    public PywbService(Config config) throws IOException {
+    public PywbService(Config config, PywbConfig pywbConfig) throws IOException {
         this.config = config;
+        this.pywbConfig = pywbConfig;
         Path working = config.getPywbDataDir().resolve("nobanner");
         Files.createDirectories(working.resolve("templates"));
 
-        Files.write(working.resolve("config.yaml"), "collections_root: ../collections\nframed_replay: false\n".getBytes(UTF_8));
+        Files.writeString(working.resolve("config.yaml"), "collections_root: ../collections\nframed_replay: false\n");
         Files.write(working.resolve("templates").resolve("banner.html"), new byte[0]);
 
-        process = new ProcessBuilder("pywb", "-b", "127.0.0.1", "-p", String.valueOf(config.getPywbPort()))
+        process = new ProcessBuilder("pywb", "-b", pywbConfig.getBindAddress(),
+                "-p", String.valueOf(pywbConfig.getPort()))
                 .directory(working.toFile())
                 .inheritIO()
                 .start();
@@ -42,8 +43,12 @@ public class PywbService implements DisposableBean {
     }
 
     public String replayUrlFor(Instance instance) {
-        return "http://127.0.0.1:" + config.getPywbPort() + "/" + collectionFor(instance) + "/mp_/" +
-                instance.getGatheredUrl();
+        String address = pywbConfig.getBindAddress();
+        if (address.equals("0.0.0.0")) {
+            address = "127.0.0.1";
+        }
+        return "http://" + address + ":" + pywbConfig.getPort() + "/" + collectionFor(instance) + "/mp_/" +
+               instance.getGatheredUrl();
     }
 
     public void reindex(Instance instance) throws IOException {
